ref style: fixed z-index which prevented modal close button of hovering and clicking

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -15,6 +15,10 @@ input[type="submit"]:hover:not(:disabled), input[type="button"]:hover:not(:disab
 
 .dashboard .my-courses .course .info>hgroup .university {text-align: left}
 
+.modal .inner-wrapper .close-modal, .leanModal_box .inner-wrapper .close-modal {
+  z-index: 15;
+}
+
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&subset=latin,cyrillic);
 @import url(http://fonts.googleapis.com/css?family=Exo+2:400,500,600,700&subset=latin,cyrillic);
 /*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */
